Fixed wrapping issue on the 4 picture section

--- a/style.css
+++ b/style.css
@@ -169,12 +169,12 @@ body {
 
     .flex-container {
         display: flex;
-        flex-wrap: wrap;
         gap: 16px;
         margin: 0 auto;
         justify-content: center;
         height: 100%;
         align-items: center;
+        width: 600px;
     }
 
         .flex-container > div {
